2012-10-17 Srecko Morovic <srecko.morovic@cern.ch>

	* tag V02-05-25
	* fix setting failed state twice in stopping

2012-10-11 Srecko Morovic <srecko.morovic@cern.ch>

	* tag V02-05-24
	* reset shm output module vector and recalculate dataset info when
	creating FWEP.

2012-09-14 Srecko Morovic <srecko.morovic@cern.ch>

	* tag V02-05-23
	* removed exit on sStopping state while running

2012-09-03 Srecko Morovic <srecko.morovic@cern.ch>

	* tag V02-05-22
	* dataset and stream information for dataset counters
	  now read from process pset and passed to the FUShmOutputModules
	* proper resetting number of datasets in trigger report helper reset

2012-09-02 Srecko Morovic <srecko.morovic@cern.ch>

	* tag V02-05-21
	* dataset stat reporting

2012-08-28 Srecko Morovic <srecko.morovic@cern.ch>

	* tag V02-05-20
	* not restarting slaves until previous one has finished restarting

2012-08-15 Srecko Morovic <srecko.morovic@cern.ch>

	* tag V02-05-19
	* MessageService handling cleanup. Keeping auto_ptr in FU class,
	  destroy before fork and recreate everywhere after fork.
	  (to prevent occassional lockups in slaves)

2012-07-20 Srecko Morovic <srecko.morovic@cern.ch>

	* tag V02-05-18
	* sending time elapsed from the last report to the iDie
	* detach DQM from Shm before setting failed state

2012-07-10 Srecko Morovic <srecko.morovic@cern.ch>

	* tag V02-05-17
	* improved logging of EP slave failures

2012-07-01 Srecko Morovic <srecko.morovic@cern.ch>

	* tag V02-05-16
	* fixed closing /proc/stat

2012-06-29 Srecko Morovic <srecko.morovic@cern.ch>

	* tag V02-05-15
	* retrieving /proc/stat cpu usage for iDie

2012-06-29 Srecko Morovic <srecko.morovic@cern.ch>

	* tag V02-05-14
	* shared timeout between waiting for STOP event and stopping framework

2012-06-20 Srecko Morovic <srecko.morovic@cern.ch>

	* tag V02-05-13
	* endJob executed before evtProcessor_ is destroyed
	* moving again EnableDone after the fork of child processes
